-removed unused methods -put repeated codes into methods such as checkforcollision and moveifnocollision - simplified holdBrick method